--- a/CPS_client/src/CPS/View/ManagerView.fxml
+++ b/CPS_client/src/CPS/View/ManagerView.fxml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
+<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
    <children>
       <Button fx:id="manager_current_state_btn" layoutX="354.0" layoutY="54.0" mnemonicParsing="false" onAction="#managerPrintCurrentState" prefHeight="30.0" prefWidth="186.0" text="Print Current State" />
       <Button fx:id="manager_performance_report_btn" layoutX="354.0" layoutY="89.0" mnemonicParsing="false" onAction="#managerPerformanceReport" prefHeight="30.0" prefWidth="186.0" text="Print Performance Report" />
       <Button fx:id="manager_log_out_btn" layoutX="40.0" layoutY="239.0" mnemonicParsing="false" onAction="#manager_log_out" text="log out" />
       <Label fx:id="manager_name_label" layoutX="40.0" layoutY="26.0" text="manager's name" />
+      <SplitMenuButton fx:id="manager_View_level_menu" layoutX="139.0" layoutY="106.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Level">
+         <items>
+            <MenuItem mnemonicParsing="false" text="Action 1" />
+            <MenuItem mnemonicParsing="false" text="Action 2" />
+         </items>
+      </SplitMenuButton>
+      <Text layoutX="40.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" text="choose level:" />
+      <Button fx:id="manager_View_print_report_btn" layoutX="139.0" layoutY="144.0" mnemonicParsing="false" onAction="#manager_View_print_report" prefHeight="25.0" prefWidth="130.0" text="print report" />
    </children>
 </AnchorPane>
