--- a/CPS_client/src/CPS/View/CustomerSignUp.fxml
+++ b/CPS_client/src/CPS/View/CustomerSignUp.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -7,9 +11,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
+<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
    <children>
-      <Label layoutX="114.0" layoutY="291.0" prefHeight="17.0" prefWidth="101.0" text="Starting date:" />
       <Label layoutX="115.0" layoutY="187.0" prefHeight="17.0" prefWidth="52.0" text="Email:" />
       <Label layoutX="115.0" layoutY="119.0" text="ID:" />
       <Label layoutX="114.0" layoutY="221.0" text="Car number:" />
@@ -18,7 +21,6 @@
       <TextField fx:id="customer_sign_up_car_number" layoutX="223.0" layoutY="217.0" promptText="Car number" />
       <Button fx:id="customer_sign_up_sign_up_btn" layoutX="223.0" layoutY="355.0" mnemonicParsing="false" onAction="#Customer_Sign_up_Sign_up" prefHeight="25.0" prefWidth="149.0" text="Sign up" />
       <Button fx:id="customer_sign_up_back_btn" layoutX="16.0" layoutY="358.0" mnemonicParsing="false" onAction="#Customer_Sign_up_Sign_up_back" prefHeight="27.0" prefWidth="85.0" text="&lt;&lt; back" />
-      <DatePicker fx:id="customer_sign_up_date_picker" layoutX="223.0" layoutY="288.0" prefHeight="25.0" prefWidth="149.0" />
       <Label layoutX="87.0" layoutY="19.0" text="Sign-up: please fill in the following:" underline="true">
          <font>
             <Font size="18.0" />
