--- a/CPS_client/src/CPS/View/CustomerView.fxml
+++ b/CPS_client/src/CPS/View/CustomerView.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
    <children>
-      <Button fx:id="customer_view_log_out" layoutX="26.0" layoutY="239.0" mnemonicParsing="false" onAction="#customer_view_log_out" text="log out" />
+      <Button fx:id="customer_view_log_out_btn" layoutX="26.0" layoutY="239.0" mnemonicParsing="false" onAction="#customer_view_log_out" text="log out" />
       <Label fx:id="customer_view_label" layoutX="46.0" layoutY="29.0" text="hello customer" />
       <Label fx:id="customer_view_label1" layoutX="26.0" layoutY="86.0" text="you have" />
       <Label fx:id="customer_view_num_msg_label" layoutX="83.0" layoutY="86.0" prefHeight="17.0" prefWidth="24.0" text="0" />
