--- a/CPS_client/src/CPS/View/InAdvanceCustomer.fxml
+++ b/CPS_client/src/CPS/View/InAdvanceCustomer.fxml
@@ -37,7 +37,7 @@
         <DatePicker fx:id="In_Advance_Customer_start_date" layoutX="156.0" layoutY="323.0" prefHeight="27.0" prefWidth="167.0" promptText="Choose Date" />
         <Label layoutX="37.0" layoutY="327.0" prefHeight="17.0" prefWidth="93.0" text="start date:" />
         <TextField fx:id="In_Advance_Customer_start_time" layoutX="344.0" layoutY="323.0" prefHeight="27.0" prefWidth="127.0" promptText="hh:mm" />
-        <Label layoutX="36.0" layoutY="362.0" prefHeight="17.0" prefWidth="74.0" text="start time:" />
+        <Label layoutX="36.0" layoutY="362.0" prefHeight="17.0" prefWidth="74.0" text="end time:" />
         <TextField fx:id="In_Advance_Customer_first_name" layoutX="156.0" layoutY="86.0" promptText="first name:" />
         <Label layoutX="36.0" layoutY="90.0" text="first name:" />
         <TextField fx:id="In_Advance_Customer_last_name" layoutX="156.0" layoutY="117.0" promptText="last name:" />
