--- a/CPS_client/bin/CPS/View/InAdvanceCustomer.fxml
+++ b/CPS_client/bin/CPS/View/InAdvanceCustomer.fxml
@@ -17,16 +17,16 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
     <children>
-        <Label layoutX="36.0" layoutY="379.0" prefHeight="17.0" prefWidth="114.0" text="payment method:" />
-        <Label layoutX="37.0" layoutY="214.0" prefHeight="17.0" prefWidth="52.0" text="email:" />
-        <Label layoutX="37.0" layoutY="255.0" prefHeight="17.0" prefWidth="114.0" text="Parking lot name:" />
+        <Label layoutX="36.0" layoutY="409.0" prefHeight="17.0" prefWidth="114.0" text="payment method:" />
+        <Label layoutX="37.0" layoutY="251.0" prefHeight="17.0" prefWidth="52.0" text="email:" />
+        <Label layoutX="37.0" layoutY="285.0" prefHeight="17.0" prefWidth="114.0" text="Parking lot name:" />
         <Label layoutX="37.0" layoutY="59.0" text="id:" />
-        <Label layoutX="36.0" layoutY="183.0" text="car number:" />
-        <DatePicker fx:id="In_Advance_Customer_end_date" layoutX="156.0" layoutY="327.0" prefHeight="27.0" prefWidth="167.0" promptText="Choose Date" />
-        <TextField fx:id="In_Advance_Customer_end_time" layoutX="344.0" layoutY="327.0" prefHeight="27.0" prefWidth="127.0" promptText="hh:mm" />
-        <TextField fx:id="In_Advance_Customer_email" layoutX="156.0" layoutY="210.0" promptText="email:" />
+        <Label layoutX="36.0" layoutY="220.0" text="car number:" />
+        <DatePicker fx:id="In_Advance_Customer_end_date" layoutX="156.0" layoutY="357.0" prefHeight="27.0" prefWidth="167.0" promptText="Choose Date" />
+        <TextField fx:id="In_Advance_Customer_end_time" layoutX="344.0" layoutY="357.0" prefHeight="27.0" prefWidth="127.0" promptText="hh:mm" />
+        <TextField fx:id="In_Advance_Customer_email" layoutX="156.0" layoutY="247.0" promptText="email:" />
         <TextField fx:id="In_Advance_Customer_id" layoutX="156.0" layoutY="55.0" promptText="id:" />
-        <TextField fx:id="In_Advance_Customer_car_number" layoutX="156.0" layoutY="179.0" promptText="car number:" />
+        <TextField fx:id="In_Advance_Customer_car_number" layoutX="156.0" layoutY="213.0" promptText="car number:" />
         <Label layoutX="79.0" layoutY="19.0" text="please provide the following requirements:" underline="true">
             <font>
                 <Font size="18.0" />
@@ -34,22 +34,22 @@
         </Label>
         <Button fx:id="In_Advance_Customer_back_btn" layoutX="21.0" layoutY="458.0" mnemonicParsing="false" onAction="#In_Advance_Customer_back" prefHeight="27.0" prefWidth="82.0" text="&lt;&lt; back" />
         <Button fx:id="In_Advance_Customer_order" layoutX="171.0" layoutY="457.0" mnemonicParsing="false" onAction="#In_Advance_Customer_Order" prefHeight="25.0" prefWidth="149.0" text="Order" />
-        <DatePicker fx:id="In_Advance_Customer_start_date" layoutX="156.0" layoutY="293.0" prefHeight="27.0" prefWidth="167.0" promptText="Choose Date" />
-        <Label layoutX="37.0" layoutY="297.0" prefHeight="17.0" prefWidth="93.0" text="start date:" />
-        <TextField fx:id="In_Advance_Customer_start_time" layoutX="344.0" layoutY="293.0" prefHeight="27.0" prefWidth="127.0" promptText="hh:mm" />
-        <Label layoutX="36.0" layoutY="332.0" prefHeight="17.0" prefWidth="74.0" text="start time:" />
+        <DatePicker fx:id="In_Advance_Customer_start_date" layoutX="156.0" layoutY="323.0" prefHeight="27.0" prefWidth="167.0" promptText="Choose Date" />
+        <Label layoutX="37.0" layoutY="327.0" prefHeight="17.0" prefWidth="93.0" text="start date:" />
+        <TextField fx:id="In_Advance_Customer_start_time" layoutX="344.0" layoutY="323.0" prefHeight="27.0" prefWidth="127.0" promptText="hh:mm" />
+        <Label layoutX="36.0" layoutY="362.0" prefHeight="17.0" prefWidth="74.0" text="start time:" />
         <TextField fx:id="In_Advance_Customer_first_name" layoutX="156.0" layoutY="86.0" promptText="first name:" />
         <Label layoutX="36.0" layoutY="90.0" text="first name:" />
         <TextField fx:id="In_Advance_Customer_last_name" layoutX="156.0" layoutY="117.0" promptText="last name:" />
         <Label layoutX="36.0" layoutY="121.0" text="last name:" />
-        <TextField fx:id="In_Advance_Customer_phone_number" layoutX="156.0" layoutY="148.0" promptText="phone number:" />
-        <Label layoutX="35.0" layoutY="152.0" text="phone number:" />
-        <RadioButton fx:id="In_Advance_Customer_cash" layoutX="156.0" layoutY="379.0" mnemonicParsing="false" text="cash">
+        <TextField fx:id="In_Advance_Customer_phone_number" layoutX="156.0" layoutY="182.0" promptText="phone number:" />
+        <Label layoutX="35.0" layoutY="189.0" text="phone number:" />
+        <RadioButton fx:id="In_Advance_Customer_cash" layoutX="156.0" layoutY="409.0" mnemonicParsing="false" text="cash">
          <toggleGroup>
             <ToggleGroup fx:id="money_toggle" />
          </toggleGroup></RadioButton>
-        <RadioButton fx:id="In_Advance_Customer_credit_card" layoutX="223.0" layoutY="379.0" mnemonicParsing="false" text="credit card" toggleGroup="$money_toggle" />
-        <SplitMenuButton fx:id="In_Advance_Customer_parking_lot_split_menu_btn" layoutX="156.0" layoutY="250.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="167.0" text="available lots">
+        <RadioButton fx:id="In_Advance_Customer_credit_card" layoutX="223.0" layoutY="409.0" mnemonicParsing="false" text="credit card" toggleGroup="$money_toggle" />
+        <SplitMenuButton fx:id="In_Advance_Customer_parking_lot_split_menu_btn" layoutX="156.0" layoutY="280.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="167.0" text="available lots">
             <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
@@ -60,5 +60,7 @@
                 </Menu>
             </items>
         </SplitMenuButton>
+      <PasswordField fx:id="In_Advance_Customer_password" layoutX="156.0" layoutY="148.0" promptText="password:" />
+      <Text layoutX="32.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="password:" />
     </children>
 </AnchorPane>
