--- a/CPS_client/src/CPS/View/ManagerView.fxml
+++ b/CPS_client/src/CPS/View/ManagerView.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuItem?>
@@ -7,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
+<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
    <children>
       <Button fx:id="manager_current_state_btn" layoutX="139.0" layoutY="139.0" mnemonicParsing="false" onAction="#managerPrintCurrentState" prefHeight="30.0" prefWidth="186.0" text="Print Current State" />
       <Button fx:id="manager_performance_report_btn" layoutX="139.0" layoutY="176.0" mnemonicParsing="false" onAction="#managerPerformanceReport" prefHeight="30.0" prefWidth="186.0" text="Print Performance Report" />
@@ -21,5 +25,6 @@
       </SplitMenuButton>
       <Text layoutX="40.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="choose level:" />
       <Button fx:id="manager_View_print_report_btn" layoutX="139.0" layoutY="103.0" mnemonicParsing="false" onAction="#manager_View_print_report" prefHeight="27.0" prefWidth="186.0" text="print level report" />
+      <Button fx:id="manager_view_update_price_btn" layoutX="139.0" layoutY="214.0" mnemonicParsing="false" onAction="#manager_view_update_price" prefHeight="30.0" prefWidth="186.0" text="update prices" />
    </children>
 </AnchorPane>
