--- a/CPS_client/src/CPS/View/WorkerView.fxml
+++ b/CPS_client/src/CPS/View/WorkerView.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
+<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
    <children>
       <Label fx:id="worker_name_label" layoutX="50.0" layoutY="48.0" text="worker name" />
-      <Button fx:id="worker_reserve_parking_btn" layoutX="391.0" layoutY="88.0" mnemonicParsing="false" onAction="#worker_resreve_parking" prefHeight="35.0" prefWidth="120.0" text="Reserve Parking" />
-      <Button fx:id="worker_availability_btn" layoutX="391.0" layoutY="129.0" mnemonicParsing="false" onAction="#worker_check_availability" prefHeight="35.0" prefWidth="120.0" text="Check Availability" />
+      <Button fx:id="worker_reserve_parking_btn" layoutX="158.0" layoutY="112.0" mnemonicParsing="false" onAction="#worker_resreve_parking" prefHeight="35.0" prefWidth="215.0" text="Reserve Parking" />
+      <Button fx:id="worker_availability_btn" layoutX="158.0" layoutY="153.0" mnemonicParsing="false" onAction="#worker_check_availability" prefHeight="35.0" prefWidth="215.0" text="Check Availability" />
       <Button fx:id="worker_log_out_btn" layoutX="43.0" layoutY="217.0" mnemonicParsing="false" onAction="#worker_log_out" text="log out" />
    </children>
 </AnchorPane>
