--- a/CPS_client/src/CPS/View/UpdatePricesView.fxml
+++ b/CPS_client/src/CPS/View/UpdatePricesView.fxml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="CPS.View.PersonViewController">
+<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
    <children>
       <Button fx:id="update_prices_view_back_btn" layoutX="14.0" layoutY="252.0" mnemonicParsing="false" onAction="#update_prices_view_back" text="&lt;&lt; back" />
       <Text layoutX="36.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="new ocassinal order price:" />
       <Text layoutX="196.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" />
       <Text layoutX="36.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="new subsribtion price:" wrappingWidth="136.44140625" />
       <Text layoutX="36.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="new in advanced order price:" />
-      <TextField fx:id="update_prices_view_in_advance_price_bar" layoutX="205.0" layoutY="47.0" promptText="new price:" />
-      <TextField fx:id="update_prices_view_subscription_price_bar" layoutX="205.0" layoutY="81.0" promptText="new price:" />
-      <TextField fx:id="update_prices_view_ocassional_price_bar" layoutX="205.0" layoutY="118.0" promptText="new price:" />
-      <Button fx:id="update_prices_view_commit_btn" layoutX="176.0" layoutY="187.0" mnemonicParsing="false" onAction="#update_prices_view_commit" prefHeight="51.0" prefWidth="129.0" text="commit new prices" />
+      <TextField fx:id="update_prices_view_in_advance_price_bar" layoutX="231.0" layoutY="47.0" promptText="new price:" />
+      <TextField fx:id="update_prices_view_subscription_price_bar" layoutX="231.0" layoutY="81.0" promptText="new price:" />
+      <TextField fx:id="update_prices_view_ocassional_price_bar" layoutX="231.0" layoutY="118.0" promptText="new price:" />
+      <Button fx:id="update_prices_view_commit_btn" layoutX="176.0" layoutY="187.0" mnemonicParsing="false" onAction="#update_prices_view_commit" prefHeight="51.0" prefWidth="178.0" text="commit new prices" />
    </children>
 </AnchorPane>
